--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </table>
   <hr size="8">
   <a href="Hobbies.html">Hobbies</a><br />
-  <a href="Contact-me.html">My Contacts</a>
+  <a href="contact-me.html">My Contacts</a>
 
 </body>
 
